--- a/src/main/resources/fxml/MenuAdminGeneral.fxml
+++ b/src/main/resources/fxml/MenuAdminGeneral.fxml
@@ -8,22 +8,22 @@
    <children>
       <Pane layoutX="90.0" layoutY="100.0" prefHeight="400.0" prefWidth="600.0" styleClass="pane" stylesheets="@../styles/MenuAdminGeneral.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button layoutX="200.0" layoutY="93.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="199.0" style="-fx-background-color: #45322e;" text="Informe parada" textFill="#eed4b5">
+            <Button fx:id="informeparadaBTN" layoutX="200.0" layoutY="93.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="199.0" style="-fx-background-color: #45322e;" text="Informe parada" textFill="#eed4b5">
                <font>
                   <Font name="System Bold Italic" size="19.0" />
                </font>
             </Button>
-            <Button layoutX="200.0" layoutY="178.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="199.0" style="-fx-background-color: #45322e;" text="Exportar carnet" textFill="#eed4b5">
+            <Button fx:id="exportarcarnetBTN" layoutX="200.0" layoutY="178.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="199.0" style="-fx-background-color: #45322e;" text="Exportar carnet" textFill="#eed4b5">
                <font>
                   <Font name="System Bold Italic" size="19.0" />
                </font>
             </Button>
-            <Button layoutX="200.0" layoutY="265.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="199.0" style="-fx-background-color: #45322e;" text="Alojarse" textFill="#eed4b5">
+            <Button fx:id="alojarseBTN" layoutX="200.0" layoutY="265.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="199.0" style="-fx-background-color: #45322e;" text="Alojarse" textFill="#eed4b5">
                <font>
                   <Font name="System Bold Italic" size="19.0" />
                </font>
             </Button>
-            <Button layoutX="457.0" layoutY="339.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #B22222;" text="Cerrar sesión" textFill="WHITE">
+            <Button fx:id="cerrarsesionBTN" layoutX="457.0" layoutY="339.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="121.0" style="-fx-background-color: #B22222;" text="Cerrar sesión" textFill="WHITE">
                <font>
                   <Font name="System Bold Italic" size="16.0" />
                </font></Button>
