--- a/src/main/resources/fxml/Registro.fxml
+++ b/src/main/resources/fxml/Registro.fxml
@@ -30,7 +30,7 @@
                <font>
                   <Font name="System Bold Italic" size="17.0" />
                </font></Button>
-            <Button fx:id="cancelarBTN" layoutX="338.0" layoutY="322.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="226.0" style="-fx-background-color: #B22222;" text="Cancelar" textFill="WHITE">
+            <Button fx:id="cancelarBTN" onAction="#volverAlMenu" layoutX="338.0" layoutY="322.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="226.0" style="-fx-background-color: #B22222;" text="Cancelar" textFill="WHITE">
                <font>
                   <Font name="System Bold Italic" size="17.0" />
                </font></Button>
