--- a/src/main/resources/styles/InicioSesion.css
+++ b/src/main/resources/styles/InicioSesion.css
@@ -1,5 +1,5 @@
 .pane{
--fx-background-image: url("../img/FondoLogin.png");
+-fx-background-image: url("../img/fondLogin.png");
 -fx-background-repeat: no-repeat;
 -fx-background-size: 100%  100%;
 -fx-background-position: center center;
