Pantalla exportar datosparada

--- a/src/main/resources/fxml/DatosParada.fxml
+++ b/src/main/resources/fxml/DatosParada.fxml
@@ -1,14 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.PeregrinosFX.controller.DatosParadaController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.PeregrinosFX.controller.DatosParadaController">
+    <children>
+        <Pane prefHeight="400.0" prefWidth="600.0" styleClass="pane" stylesheets="@../styles/DatosParada.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <Label fx:id="estanciasLBL" layoutX="35.0" layoutY="135.0" text="Estancias:">
+                    <font>
+                        <Font name="System Bold Italic" size="24.0" />
+                    </font>
+                </Label>
+                <Label fx:id="fechaInicialLBL" layoutX="394.0" layoutY="58.0" text="Fecha final:">
+                    <font>
+                        <Font name="System Bold Italic" size="24.0" />
+                    </font>
+                </Label>
+                <Label fx:id="fechaFinalLBL" layoutX="190.0" layoutY="58.0" text="Fecha inicial:">
+                    <font>
+                        <Font name="System Bold Italic" size="24.0" />
+                    </font>
+                </Label>
+                <DatePicker fx:id="fechafinalDATE" layoutX="394.0" layoutY="92.0" style="-fx-background-color: #eed4b5;" />
+                <DatePicker fx:id="fechainicialDATE" layoutX="190.0" layoutY="92.0" style="-fx-background-color: #eed4b5;" />
+                <Label fx:id="paradaLBL" layoutX="35.0" layoutY="58.0" text="Parada:">
+                    <font>
+                        <Font name="System Bold Italic" size="24.0" />
+                    </font>
+                </Label>
+                <ComboBox fx:id="paradaCB" layoutX="35.0" layoutY="92.0" prefHeight="25.0" prefWidth="66.0" style="-fx-background-color: D5B794;" />
+                <Button fx:id="inicioBTN" layoutX="459.0" layoutY="315.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="111.0" style="-fx-background-color: #B22222;" text="Inicio" textFill="WHITE">
+                    <font>
+                        <Font name="System Bold Italic" size="20.0" />
+                    </font>
+                </Button>
+                <TableView fx:id="estanciasTABLE" layoutX="35.0" layoutY="174.0" prefHeight="189.0" prefWidth="361.0" style="-fx-background-color: D5B794; -fx: 6px;">
+                    <columns>
+                        <TableColumn fx:id="idColmn" editable="false" prefWidth="75.0" resizable="false" style="-fx-background-color: #998e8b; -fx-text-fill: white;" text="ID">
+                        </TableColumn>
+                        <TableColumn fx:id="fechaColumn" editable="false" prefWidth="75.0" style="-fx-background-color: #998e8b;" text="FECHA" />
+                        <TableColumn fx:id="vipColumn" editable="false" prefWidth="75.0" style="-fx-background-color: #998e8b;" text="VIP" />
+                        <TableColumn fx:id="peregrinoColumn" editable="false" prefWidth="135.0" style="-fx-background-color: #998e8b;" text="PEREGRINO" />
+                    </columns>
+                </TableView>
+            </children>
+        </Pane>
+    </children>
 </AnchorPane>
