--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -8,23 +8,29 @@
    <children>
       <Pane layoutX="359.0" layoutY="150.0" prefHeight="769.0" prefWidth="1019.0" styleClass="pane" stylesheets="@../styles/InicioSesion.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label fx:id="userLBL" layoutX="59.0" layoutY="60.0" prefHeight="84.0" prefWidth="821.0" text="Usuario:" textFill="#45322e">
+            <Label fx:id="userLBL" layoutX="48.0" layoutY="40.0" prefHeight="54.0" prefWidth="219.0" text="Usuario:" textFill="#45322e">
                <font>
                   <Font name="System Bold Italic" size="25.0" />
                </font>
             </Label>
-            <Label fx:id="contrsenaLBL" layoutX="60.0" layoutY="167.0" prefHeight="92.0" prefWidth="796.0" text="Contraseña: " textFill="#45322e">
+            <Label fx:id="contrsenaLBL" layoutX="48.0" layoutY="139.0" prefHeight="84.0" prefWidth="411.0" text="Contraseña: " textFill="#45322e">
                <font>
                   <Font name="System Bold Italic" size="25.0" />
                </font>
             </Label>
-            <TextField fx:id="usuarioTF" editable="false" layoutX="99.0" layoutY="228.0" prefHeight="60.0" prefWidth="821.0" style="-fx-background-color: transparent;" />
-            <TextField fx:id="contrasenaTF" layoutX="99.0" layoutY="437.0" prefHeight="60.0" prefWidth="821.0" style="-fx-background-color: trasnparent;" />
-            <Button fx:id="aceptarBTN" onAction="#login" layoutX="60.0" layoutY="325.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="136.0" style="-fx-background-color: #009000;" text="Aceptar" textFill="#fafafa">
+            <TextField fx:id="usuarioTF" layoutX="51.0" layoutY="94.0" prefHeight="54.0" prefWidth="432.0" style="-fx-background-color: transparent;">
+               <font>
+                  <Font name="System Bold Italic" size="19.0" />
+               </font></TextField>
+            <TextField fx:id="contrasenaTF" layoutX="51.0" layoutY="200.0" prefHeight="61.0" prefWidth="352.0" style="-fx-background-color: trasnparent;">
+               <font>
+                  <Font size="19.0" />
+               </font></TextField>
+            <Button fx:id="aceptarBTN" layoutX="60.0" layoutY="325.0" mnemonicParsing="false" onAction="#login" prefHeight="37.0" prefWidth="136.0" style="-fx-background-color: #009000;" text="Aceptar" textFill="#fafafa">
                <font>
                   <Font name="System Bold Italic" size="14.0" />
                </font></Button>
-            <Button fx:id="cancelarBTN" onAction="#volverAlMenu" layoutX="406.0" layoutY="325.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="136.0" style="-fx-background-color: #B22222;" text="Cancelar" textFill="#fafafa">
+            <Button fx:id="cancelarBTN" layoutX="406.0" layoutY="325.0" mnemonicParsing="false" onAction="#volverAlMenu" prefHeight="37.0" prefWidth="136.0" style="-fx-background-color: #B22222;" text="Cancelar" textFill="#fafafa">
                <font>
                   <Font name="System Bold Italic" size="14.0" />
                </font></Button>
