--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -24,7 +24,7 @@
                </font></TextField>
             <TextField fx:id="contrasenaTF" layoutX="51.0" layoutY="200.0" prefHeight="61.0" prefWidth="352.0" style="-fx-background-color: trasnparent;">
                <font>
-                  <Font size="19.0" />
+                  <Font name="System Bold Italic" size="19.0" />
                </font></TextField>
             <Button fx:id="aceptarBTN" layoutX="60.0" layoutY="325.0" mnemonicParsing="false" onAction="#login" prefHeight="37.0" prefWidth="136.0" style="-fx-background-color: #009000;" text="Aceptar" textFill="#fafafa">
                <font>
