--- a/src/main/resources/fxml/Alojarse.fxml
+++ b/src/main/resources/fxml/Alojarse.fxml
@@ -49,7 +49,7 @@
                <font>
                   <Font name="System Bold Italic" size="14.0" />
                </font></Button>
-            <Button fx:id="cancelarBTN" layoutX="391.0" layoutY="325.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="178.0" style="-fx-background-color: #B22222;" text="Inicio" textFill="#fafafa">
+            <Button fx:id="cancelarBTN" onAction="#cancelarAction" layoutX="391.0" layoutY="325.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="178.0" style="-fx-background-color: #B22222;" text="Inicio" textFill="#fafafa">
                <font>
                   <Font name="System Bold Italic" size="14.0" />
                </font></Button>
