--- a/src/main/resources/fxml/DatosParada.fxml
+++ b/src/main/resources/fxml/DatosParada.fxml
@@ -31,7 +31,7 @@
                     </font>
                 </Label>
                 <ComboBox fx:id="paradaCB" layoutX="35.0" layoutY="92.0" prefHeight="25.0" prefWidth="66.0" style="-fx-background-color: D5B794;" />
-                <Button fx:id="inicioBTN" layoutX="459.0" layoutY="315.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="111.0" style="-fx-background-color: #B22222;" text="Inicio" textFill="WHITE">
+                <Button fx:id="inicioBTN" onAction="#volverAlMenu" layoutX="459.0" layoutY="315.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="111.0" style="-fx-background-color: #B22222;" text="Inicio" textFill="WHITE">
                     <font>
                         <Font name="System Bold Italic" size="20.0" />
                     </font>
