--- a/src/main/resources/fxml/Alojarse.fxml
+++ b/src/main/resources/fxml/Alojarse.fxml
@@ -18,14 +18,14 @@
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <ComboBox fx:id="peregrinoCB" layoutX="433.0" layoutY="62.0" prefHeight="25.0" prefWidth="88.0" style="-fx-background-color: D5B794;"/>
-            <ComboBox fx:id="paradaCB" layoutX="130.0" layoutY="62.0" prefHeight="25.0" prefWidth="88.0" style="-fx-background-color: D5B794;"/>
+            <ComboBox fx:id="peregrinoCB" layoutX="433.0" layoutY="62.0" prefHeight="25.0" prefWidth="88.0" style="-fx-background-color: D5B794;" />
+            <ComboBox fx:id="paradaCB" editable="true" layoutX="130.0" layoutY="62.0" prefHeight="25.0" prefWidth="88.0" style="-fx-background-color: D5B794;" />
             <Label fx:id="estanciaLBL" layoutX="32.0" layoutY="120.0" text="¿Va a realizar una estancia?" textFill="45322e">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <CheckBox fx:id="estanciaCheck" layoutX="365.0" layoutY="129.0" mnemonicParsing="false" prefWidth="25.0" textFill="45322e" />
+            <CheckBox fx:id="estanciaCheck" layoutX="365.0" layoutY="129.0" mnemonicParsing="false" onAction="#estanciaClick" prefWidth="25.0" textFill="45322e" />
             <Label fx:id="vipLBL" layoutX="32.0" layoutY="183.0" text="VIP:" textFill="#45322e70">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
@@ -49,7 +49,7 @@
                <font>
                   <Font name="System Bold Italic" size="14.0" />
                </font></Button>
-            <Button fx:id="cancelarBTN" onAction="#cancelarAction" layoutX="391.0" layoutY="325.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="178.0" style="-fx-background-color: #B22222;" text="Inicio" textFill="#fafafa">
+            <Button fx:id="cancelarBTN" layoutX="391.0" layoutY="325.0" mnemonicParsing="false" onAction="#cancelarAction" prefHeight="37.0" prefWidth="178.0" style="-fx-background-color: #B22222;" text="Inicio" textFill="#fafafa">
                <font>
                   <Font name="System Bold Italic" size="14.0" />
                </font></Button>
