--- a/src/main/resources/fxml/Registro.fxml
+++ b/src/main/resources/fxml/Registro.fxml
@@ -26,7 +26,7 @@
                </font>
             </Label>
             <ComboBox fx:id="nacionalidadCB" layoutX="28.0" layoutY="261.0" prefHeight="25.0" prefWidth="226.0" style="-fx-background-color: D5B794;" />
-            <Button fx:id="aceptarBTN" layoutX="28.0" layoutY="322.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="226.0" style="-fx-background-color: #009000;" text="Aceptar" textFill="#fafafa">
+            <Button fx:id="aceptarBTN" onAction="#registro" layoutX="28.0" layoutY="322.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="226.0" style="-fx-background-color: #009000;" text="Aceptar" textFill="#fafafa">
                <font>
                   <Font name="System Bold Italic" size="17.0" />
                </font></Button>
