--- a/src/main/resources/fxml/DatosParada.fxml
+++ b/src/main/resources/fxml/DatosParada.fxml
@@ -23,15 +23,15 @@
                         <Font name="System Bold Italic" size="24.0" />
                     </font>
                 </Label>
-                <DatePicker fx:id="fechafinalDATE" layoutX="394.0" layoutY="92.0" style="-fx-background-color: #eed4b5;" />
-                <DatePicker fx:id="fechainicialDATE" layoutX="190.0" layoutY="92.0" style="-fx-background-color: #eed4b5;" />
+                <DatePicker fx:id="fechafinalDATE" editable="false" layoutX="394.0" layoutY="92.0" style="-fx-background-color: D5B794;" />
+                <DatePicker fx:id="fechainicialDATE" editable="false" layoutX="190.0" layoutY="92.0" style="-fx-background-color: D5B794;" />
                 <Label fx:id="paradaLBL" layoutX="35.0" layoutY="58.0" text="Parada:">
                     <font>
                         <Font name="System Bold Italic" size="24.0" />
                     </font>
                 </Label>
-                <ComboBox fx:id="paradaCB" layoutX="35.0" layoutY="92.0" prefHeight="25.0" prefWidth="66.0" style="-fx-background-color: D5B794;" />
-                <Button fx:id="inicioBTN" onAction="#volverAlMenu" layoutX="459.0" layoutY="315.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="111.0" style="-fx-background-color: #B22222;" text="Inicio" textFill="WHITE">
+                <ComboBox fx:id="paradaCB" layoutX="35.0" layoutY="92.0" prefHeight="25.0" prefWidth="131.0" style="-fx-background-color: D5B794;" />
+                <Button fx:id="inicioBTN" layoutX="459.0" layoutY="318.0" mnemonicParsing="false" onAction="#volverAlMenu" prefHeight="45.0" prefWidth="111.0" style="-fx-background-color: #B22222;" text="Inicio" textFill="WHITE">
                     <font>
                         <Font name="System Bold Italic" size="20.0" />
                     </font>
@@ -40,11 +40,16 @@
                     <columns>
                         <TableColumn fx:id="idColmn" editable="false" prefWidth="75.0" resizable="false" style="-fx-background-color: #998e8b; -fx-text-fill: white;" text="ID">
                         </TableColumn>
-                        <TableColumn fx:id="fechaColumn" editable="false" prefWidth="75.0" style="-fx-background-color: #998e8b;" text="FECHA" />
-                        <TableColumn fx:id="vipColumn" editable="false" prefWidth="75.0" style="-fx-background-color: #998e8b;" text="VIP" />
-                        <TableColumn fx:id="peregrinoColumn" editable="false" prefWidth="135.0" style="-fx-background-color: #998e8b;" text="PEREGRINO" />
+                        <TableColumn fx:id="fechaColmn" editable="false" prefWidth="75.0" style="-fx-background-color: #998e8b;" text="FECHA" />
+                        <TableColumn fx:id="vipColmn" editable="false" prefWidth="75.0" style="-fx-background-color: #998e8b;" text="VIP" />
+                        <TableColumn fx:id="peregrinoColmn" editable="false" prefWidth="135.0" style="-fx-background-color: #998e8b;" text="PEREGRINO" />
                     </columns>
                 </TableView>
+                <Button fx:id="buscarBTN" layoutX="459.0" layoutY="246.0" mnemonicParsing="false" onAction="#datosParada" prefHeight="45.0" prefWidth="111.0" style="-fx-background-color: #009000;" text="Buscar" textFill="WHITE">
+                    <font>
+                        <Font name="System Bold Italic" size="20.0" />
+                    </font>
+                </Button>
             </children>
         </Pane>
     </children>
