--- a/src/main/resources/fxml/UsuarioCreado.fxml
+++ b/src/main/resources/fxml/UsuarioCreado.fxml
@@ -25,8 +25,8 @@
                   <Font name="System Bold Italic" size="17.0" />
                </font></Label>
             <TextField fx:id="usuarioTXT" editable="false" layoutX="49.0" layoutY="97.0" prefHeight="25.0" prefWidth="331.0" style="-fx-background-color: D5B794;" />
-            <PasswordField fx:id="passField" editable="false" layoutX="49.0" layoutY="161.0" prefHeight="25.0" prefWidth="331.0" style="-fx-background-color: D5B794;" />
-            <Button layoutX="409.0" layoutY="161.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="146.0" style="-fx-background-color: #45322e;" text="Mostrar contraseña" textFill="#eed4b5">
+            <TextField fx:id="passTF" editable="false" layoutX="49.0" layoutY="161.0" prefHeight="25.0" prefWidth="331.0" style="-fx-background-color: D5B794;" />
+            <Button layoutX="409.0" onAction="#mostrarAction" layoutY="161.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="146.0" style="-fx-background-color: #45322e;" text="Mostrar contraseña" textFill="#eed4b5">
                <font>
                   <Font name="System Bold Italic" size="12.0" />
                </font></Button>
